# uri

./: Cargo.toml  README.md
.github/workflows/: warlock.yml
examples/: basic.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: match_uriparser.rs
src/: lib.rs  parser.rs
